syntax = "proto3";

package model;

option java_multiple_files = true;
option java_outer_classname = "PaymentsProto";

import "google/protobuf/empty.proto";

service PaymentService {
    rpc getPayments (google.protobuf.Empty) returns (Payments) {
    }

    rpc createPayment (PaymentCreateRequest) returns (PaymentsResponse) {
    }
}

message PaymentsResponse{
  string code = 1;
  string message = 2;
}

message PaymentCreateRequest {
  string orderId = 1;
  string cardNumber = 2;
  string cardOwner = 3;
}

message Payment {
  string orderId = 1;
  string cardNumber = 2;
  string cardOwner = 3;
}

message Payments {
    repeated Payment payments = 1;
}
